Fix flight spacing for missing font scenario

--- a/app/assets/stylesheets/flights.css.scss
+++ b/app/assets/stylesheets/flights.css.scss
@@ -125,8 +125,8 @@ span.seat_class {
     }
 
     .col1, .col2, .col3 { display: inline-block; vertical-align: top }
-    .col1 { width: 150px }
-    .col2 { width: 350px }
+    .col1 { width: 160px }
+    .col2 { width: 340px }
 
     .fa-plane { font-size: .8em }
 
